# 2IMS00

./: .test1.cpp.swp  CMakeLists.txt  NaiveBayesClassifier.cpp  nb.cpp  run_client.sh  run_server.sh  test.cpp  test1.cpp  test2.cpp  train_all.txt
data/Absenteeism_at_work_AAA/: Absenteeism_at_work.attrs  Absenteeism_at_work_client.csv  Absenteeism_at_work_server.csv
data/Adult/: adult.attrs  adult.data  adult.test  adult_discretized.data  adult_discretized.test  adult_discretized_client.data  adult_discretized_client.test  adult_discretized_server.data  adult_discretized_server.test
data/balance_scale/: balance-scale-client.data  balance-scale-server.data  balance-scale.classmap
data/breast_cancer/: breast-cancer-client.data  breast-cancer-server.data  breast-cancer.attrs
result/: Abs_even  Abse  adult  adult_even  balance  balance_even  breast
